Profiles avanzado, queda poner en gris el perfil que se está usando, y añadir ciertos datos al perfil como puede ser las partidas ganadas y las skins

--- a/app/src/main/res/menu/configuration_options.xml
+++ b/app/src/main/res/menu/configuration_options.xml
@@ -14,4 +14,7 @@
     <item
         android:id="@+id/MenuConfiguracionAjustes"
         android:title="@string/ajustes" />
+    <item
+        android:id="@+id/MenuConfiguracionPerfiles"
+        android:title="@string/perfiles" />
 </menu>
