--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,14 +25,14 @@
         android:orientation="horizontal">
 
         <GridView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/tablero"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="#000000"
-            android:numColumns="8"
-            android:visibility="visible"
-            tools:visibility="visible">
-
+            android:gravity="center_horizontal"
+            android:numColumns="8" >
         </GridView>
+
     </LinearLayout>
 
     <LinearLayout
