--- a/app/src/main/res/layout/achievement_listview.xml
+++ b/app/src/main/res/layout/achievement_listview.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayoutAchievement"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,12 +14,14 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="@string/profile"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        tools:text="Logro" />
 
-    <CheckBox
-        android:id="@+id/checkbox_achievement"
+    <ImageView
+        android:id="@+id/im_blockedachievement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        app:srcCompat="@android:drawable/ic_secure" />
 
 </LinearLayout>
