--- a/app/src/main/res/layout/skin_listview.xml
+++ b/app/src/main/res/layout/skin_listview.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linearLayoutProfile"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayoutSkins"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
+
+    <ImageView
+        android:id="@+id/iv_SkinPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.25"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textViewName"
@@ -12,13 +21,6 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="@string/profile"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/points_counter"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:text="@string/profile"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        tools:text="SkinName" />
 </LinearLayout>
