--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,14 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="blue">#FF4F7BF6</color>
+    <color name="red">#FFC70039</color>
+    <color name="cyan">#FF5AEDF7</color>
+    <color name="brown">#FF844930</color>
+    <color name="pink">#FFF758F7</color>
+    <color name="green">#FFDAF7A6 </color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
