--- a/app/src/main/res/layout/skin_listview.xml
+++ b/app/src/main/res/layout/skin_listview.xml
@@ -23,4 +23,12 @@
         android:text="@string/profile"
         android:textSize="20sp"
         tools:text="SkinName" />
+
+    <CheckBox
+        android:id="@+id/useSkin"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.25"
+        android:text="@string/use" />
+
 </LinearLayout>
