--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -81,6 +81,27 @@
                             app:srcCompat="@android:drawable/screen_background_dark" />
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/botonModoNormal"
+                            android:layout_width="0.1dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:text="Modo Normal" />
+
+                        <Button
+                            android:id="@+id/botonModoAleatorio"
+                            android:layout_width="0.1dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:text="Modo Aleatorio" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <LinearLayout
