--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -5,6 +5,9 @@
         android:id="@+id/profileMenuInfo"
         android:title="@string/ver_informacion" />
     <item
+        android:id="@+id/profileMenuAddFriend"
+        android:title="@string/añadir_amigo" />
+    <item
         android:id="@+id/profileMenuUse"
         android:title="@string/usar" />
     <item
