--- a/app/src/main/res/layout/skin_listview.xml
+++ b/app/src/main/res/layout/skin_listview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayoutSkins"
     android:layout_width="match_parent"
@@ -17,17 +16,17 @@
     <TextView
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:text="@string/profile"
+        android:text="@string/skins"
         android:textSize="20sp"
         tools:text="SkinName" />
 
     <CheckBox
         android:id="@+id/useSkin"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="0.25"
         android:text="@string/use" />
 
