--- a/app/src/main/res/layout/skin_listview.xml
+++ b/app/src/main/res/layout/skin_listview.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/iv_SkinPhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_weight="0.25"
         tools:srcCompat="@tools:sample/avatars" />
 
