--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,15 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center|center_horizontal|left"
-                android:layout_weight="1"
+                android:layout_weight="0.1"
                 android:adjustViewBounds="false"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <ImageView
-                android:id="@+id/MenuConfiguracion"
-                android:layout_width="50sp"
-                android:layout_height="50sp"
-                android:layout_gravity="center|right|center_horizontal"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_manage" />
+                android:orientation="vertical"></LinearLayout>
 
         </LinearLayout>
 
@@ -83,20 +81,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:orientation="horizontal"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/botonAmigos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Amigos" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
