--- a/app/src/main/res/layout/activity_visualizeprofile.xml
+++ b/app/src/main/res/layout/activity_visualizeprofile.xml
@@ -11,6 +11,28 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/backButtonLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.005"
+                android:contentDescription="@android:string/cancel"
+                app:srcCompat="@android:drawable/ic_menu_revert" />
+
+            <LinearLayout
+                android:id="@+id/backButtonLayoutSpace"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"></LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
