--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -17,6 +17,7 @@
             android:layout_height="122dp"
             android:layout_weight="1"
             android:textSize="24sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -25,13 +26,12 @@
         android:orientation="horizontal">
 
         <GridView
-            android:id="@+id/tablero"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/board"
+            android:layout_width="match_parent"
+            android:layout_height="392dp"
             android:background="#0000"
             android:gravity="center_horizontal"
-            android:numColumns="8" >
-        </GridView>
+            android:numColumns="8"></GridView>
 
     </LinearLayout>
 
@@ -39,5 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="122dp"
+            android:layout_weight="1"
+            android:textSize="24sp" />
+    </LinearLayout>
 </LinearLayout>
