--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,15 +6,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/historyLog"
+        android:layout_width="match_parent"
+
+        android:layout_height="48dp"
+        android:layout_weight="1"
+        android:textSize="24sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView5"
+        <ImageView
+            android:id="@+id/blacksPlayerImage"
             android:layout_width="wrap_content"
-            android:layout_height="122dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.20"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/blacksPlayer"
+            android:layout_width="wrap_content"
+
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="24sp" />
 
@@ -36,16 +52,23 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
         android:layout_weight="1"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/whitesPlayer"
             android:layout_width="wrap_content"
-            android:layout_height="122dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/whitesPlayerImage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.20"
+            tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 </LinearLayout>
