--- a/app/src/main/res/layout/activity_showhistory.xml
+++ b/app/src/main/res/layout/activity_showhistory.xml
@@ -31,12 +31,21 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"></LinearLayout>
+
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/listViewHistory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/textViewNameHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/textViewDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.005"
+            android:text="TextView" />
 
     </LinearLayout>
 </LinearLayout>
