--- a/app/src/main/res/layout/skin_selector.xml
+++ b/app/src/main/res/layout/skin_selector.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SkinsActivity">
+    tools:context=".ui.SkinsActivity">
 
     <LinearLayout
         android:id="@+id/backButtonLayout"
